--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+/.idea/.gitignore
+/.idea/jsLibraryMappings.xml
+/.idea/modules.xml
+/.idea/Semestral Work.iml
