--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@types/d3": "^7.1.0",
+    "@types/topojson-client": "^3.1.1",
     "d3": "^7.3.0",
     "rxjs": "~7.5.0",
+    "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
