--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/d3": "^7.1.0",
     "@types/topojson-client": "^3.1.1",
     "d3": "^7.3.0",
+    "d3-geo-voronoi": "^2.0.1",
     "rxjs": "~7.5.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
