--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@types/d3": "^7.1.0",
+    "@types/d3-voronoi": "^1.1.9",
     "@types/topojson-client": "^3.1.1",
     "d3": "^7.3.0",
     "d3-geo-voronoi": "^2.0.1",
+    "d3-voronoi": "^1.1.4",
     "rxjs": "~7.5.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
